# mo2-bsa-extractor-new

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  requirements.txt  vcpkg.json
src/: CMakeLists.txt  __init__.py  bsa_extractor.py  main.cpp
